# jovian.nvim

./: .gitignore  .luacheckrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  SECURITY.md  backend_check.md  cell_1.md  cell_2.md  demo_jovian.py  flake.nix  pyproject.toml  run_tests.sh  setup.md  test_commands.lua  test_graph.py  test_resize_layout.lua
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
core/: Cargo.toml
core/src/: ipynb.rs  kernel.rs  kernelspec.rs  kitty.rs  main.rs  notebook.rs  protocol.rs  rpc.rs  session.rs
doc/: jovian.txt
examples/: demo_jovian.py
lua/jovian/: cell.lua  commands.lua  complete.lua  config.lua  core.lua  diagnostics.lua  handlers.lua  health.lua  highlights.lua  hosts.lua  init.lua  inline_images.lua  install.lua  ipynb_open.lua  kernel.py  keymaps.lua  pickers.lua  python.lua  session.lua  (+6 more)
plugin/: jovian.lua
scratch/: core.lua.broken
tests/: edge_cases.lua  jukit_spec.lua  minimal_init.lua  test_async_flow.lua  test_cell.lua  test_cell_frame.lua  test_commands.lua  test_features.lua  test_inline_outputs.lua  test_integration.lua  test_ipynb.lua  test_kitty_images.lua  test_markdown_images.lua  test_markdown_table.lua  test_math.lua  test_outputs_json_resilience.lua  test_python_resolve.lua  test_remote_ssh.lua  test_resize_layout.lua  test_rust_phase1.lua  test_vars_pane.lua  verify_hash.lua  verify_refactoring.lua  verify_stale.lua  verify_virt_text.lua
(+28 files in other folders)
